<resources>
    <string name="app_name" translatable="false">ComplexivoTransportApp</string>
    <string name="ingresar">Ingresar</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Direccion</string>
    <string name="celular">Celular</string>
    <string name="correo">Correo</string>
    <string name="anadir">Agregar Imagen</string>
    <string name="infoRegistro">Información de Registro</string>
    <string name="crearCuenta">¿No tienes cuenta? Regístrate.</string>
    <string name="tipoUsuario">Tipo Usuario</string>
    <string name="botonUsuario">Usuario</string>
    <string name="botonTransportista">Transportista</string>
    <string name="botonRegsitro">Registrarse</string>
    <string name="userName">Nombre Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="title_activity_listar">Listar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>