<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registroUsuarios">


    <EditText
        android:id="@+id/editTextApellidoPersona"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombrePersona" />

    <EditText
        android:id="@+id/editTextCelularPersona"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/celular"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellidoPersona" />

    <EditText
        android:id="@+id/editTextCorreoPersona"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCelularPersona" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreoPersona" />

    <EditText
        android:id="@+id/editTextContrasenia"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario" />

    <EditText
        android:id="@+id/editTextCedulaPersona"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="78dp"
        android:ems="10"
        android:hint="@string/botonUsuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <EditText
        android:id="@+id/editTextNombrePersona"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCedulaPersona" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="81dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="89dp"
        android:onClick="onclick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="14dp"
        android:text="@string/anadir"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="247dp"
        android:layout_height="33dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:text="@string/infoRegistro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGuardarPersona"
        android:layout_width="155dp"
        android:layout_height="62dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="71dp"
        android:text="@string/botonRegsitro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContrasenia" />

    <EditText
        android:id="@+id/editTextImagen"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="Nombre Imagen"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextCedulaPersona"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

</androidx.constraintlayout.widget.ConstraintLayout>