<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarPersona">

    <EditText
        android:id="@+id/modificaImagen"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:hint="@string/action_settings"
        android:inputType="textPersonName"
        android:text=" "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificaCedula" />

    <EditText
        android:id="@+id/modificaNombre"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificaImagen" />

    <EditText
        android:id="@+id/modificaCedula"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:hint="Cedula"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/modificaApellido"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificaNombre" />

    <EditText
        android:id="@+id/modificaCelular"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/celular"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificaApellido" />

    <EditText
        android:id="@+id/modificaCorreo"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificaCelular" />

    <EditText
        android:id="@+id/modificaUsuario"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificaCorreo" />

    <EditText
        android:id="@+id/modificaContrasenia"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificaUsuario" />

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="118dp"
        android:text="GUARDAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancelar"
        app:layout_constraintTop_toBottomOf="@+id/modificaContrasenia" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="118dp"
        android:text="CANCELAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificaContrasenia" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="146dp"
        android:text="Actualización de Datos"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>